<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical"
    tools:context=".view.CalculatorActivity" >

    <TextView
        android:id="@+id/textView"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:textAlignment="center"
        android:layout_marginTop="50dp"
        android:textSize="36sp"
        android:text="Calculator" />

    <EditText
        android:id="@+id/num1EditText"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginTop="80dp"
        android:ems="10"
        android:text=""
        android:hint="@string/first_number"
        android:inputType="number"
        android:minHeight="48dp"
        android:importantForAutofill="no" />

    <EditText
        android:id="@+id/num2EditText"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:ems="10"
        android:text=""
        android:hint="@string/second_number"
        android:inputType="number"
        android:minHeight="48dp"
        android:textColorHint="#8D6E63"
        android:importantForAutofill="no" />

    <Button
        android:id="@+id/sumButton"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:text="@string/add" />

    <Button
        android:id="@+id/subButton"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:text="@string/sub" />

    <Button
        android:id="@+id/divButton"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:text="@string/div" />

    <Button
        android:id="@+id/multButton"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:text="@string/mult" />

    <TextView
        android:id="@+id/resultTextView"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:text="@string/result" />
</LinearLayout>